2013-07-31  Andreas Kupries  <andreask@activestate.com>

	* debug.tcl: Fixed missing export of 'pdict'. Plus better handling
	* debug.man: of output channel definition. stderr is default only
	* pkgIndex.tcl: if nothing is set by the user. This now allows
	  applications to override the default for all packages not having
	  their own output settings. Version bumped to 1.0.1

2013-04-08  Andreas Kupries <andreask@activestate.com>

	* debug.man: Added documentation.
	* debug_caller.man:
	* debug_heartbeat.man:
	* debug_timestamp.man:

2013-04-04  Andreas Kupries  <aku@hephaistos>

	* New module and packages for generating a debug
	  narrative. Adapted from the Wub utility package
	  Debug, by Colin McCormack.